[gd_scene load_steps=6 format=2]

[ext_resource path="res://SCN/GUI/IMG/PauseWindow.png" type="Texture" id=1]
[ext_resource path="res://SCN/GUI/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://LVL/2 Main Screen/SCN/RES/Perfect DOS VGA 437.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SCN/GUI/PauseScreen/PauseScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Load" parent="." instance=ExtResource( 2 )]
margin_left = -32.0
margin_top = -56.0
margin_right = 96.0
margin_bottom = -40.0
text = "Load"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Load[/wave][color=#ffffff]>[/color]"

[node name="Save" parent="." instance=ExtResource( 2 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = -16.0
text = "Save"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Save[/wave][color=#ffffff]>[/color]"

[node name="Settings" parent="." instance=ExtResource( 2 )]
margin_left = -48.0
margin_top = -8.0
margin_right = 80.0
margin_bottom = 8.0
text = "Settings"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Settings[/wave][color=#ffffff]>[/color]"

[node name="ExitToMenu" parent="." instance=ExtResource( 2 )]
margin_left = -64.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 32.0
text = "Exit To Menu"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Exit to Menu[/wave][color=#ffffff]>[/color]"

[node name="ExitToDesktop" parent="." instance=ExtResource( 2 )]
margin_left = -80.0
margin_top = 40.0
margin_right = 48.0
margin_bottom = 56.0
text = "Exit To Desktop"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Exit To Desktop[/wave][color=#ffffff]>[/color]"

[node name="Resume" parent="." instance=ExtResource( 2 )]
margin_left = -40.0
margin_top = 64.0
margin_right = 88.0
margin_bottom = 80.0
text = "Resume"
text_with_effects = "[color=#ffffff]<[/color][wave amp=30 freq=2]Resume[/wave][color=#ffffff]>[/color]"

[node name="Label" type="Label" parent="."]
margin_left = -28.0
margin_top = -88.0
margin_right = 20.0
margin_bottom = -72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pause"

[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="ExitToMenu" to="." method="_on_ExitToMenu_pressed"]
[connection signal="pressed" from="ExitToDesktop" to="." method="_on_ExitToDesktop_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
