extends Control


func _ready():
	self.hide()
	pass


func _on_Load_pressed():
	print("Load")
	pass # Replace with function body.


func _on_Save_pressed():
	print("Save")
	pass # Replace with function body.
	
func _on_Settings_pressed():
	print("Settings")
	pass # Replace with function body.

func _on_ExitToMenu_pressed():
	print("Exit to Menu")
	pass # Replace with function body.


func _on_ExitToDesktop_pressed():
	print("Exit to Desktop")
	pass # Replace with function body.


func _on_Resume_pressed():
	print("Resume")
	pass # Replace with function body.
